@@ -69,6 +69,7 @@ namespace MonoDevelop.Debugger.Gdb
 					continue;
 				}
 				string cmdline = File.ReadAllText (Path.Combine (dir, "cmdline"));
+				cmdline = cmdline.Replace ('\0',' ');
 				ProcessInfo pi = new ProcessInfo (id, cmdline);
 				procs.Add (pi);
 			}
