@@ -1,3 +1,8 @@
+2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* GdbSessionFactory.cs: Fix construction process command line string.
+	* GdbSession.cs: Track api changes.
+
 2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Debugger.Gdb.make: Install the assemblies to the correct
